# sil-backend-assessment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  hello.py  pyproject.toml
.github/workflows/: backend-linters.yml  deploy-production.yml  test-backend.yml
app/: backend_pre_start.py  crud.py  initialize_db.py  main.py  models.py  tests_prestart.py
app/alembic/: env.py
app/alembic/versions/: 0a4c1b32d1bc_update_create_photo_method.py  28f8db198b0c_add_created_and_updated_at_fields_to_.py  30679f805745_add_new_password.py  38f9e197bdcb_create_the_use_model.py  f8b428e00369_create_the_albums_and_user_model.py
app/api/: main.py  user_controllers.py
app/api/routes/: albums.py  get_album_photos.py  get_all_photos.py  get_user_albums.py  health_check.py  login.py  photos.py  users.py
app/middleware/: db.py  preset.py  user_auth.py
app/tests/: conftest.py
app/tests/api/: test_user_login.py
app/tests/api/users/: test_users_endpoints.py
app/tests/crud/: test_album_cruds.py  test_photo_cruds.py  test_user_auth.py
app/tests/utils/: test_get_super_user_token.py  token_gen.py  user_auth.py
scripts/: prestart.sh
