[project]
name = "sil-backend-assessment"
version = "0.1.0"
description = "Backend that enables user to store their favorurite albums and photos"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
]

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.2.2",
    "pytest<8.0.0,>=7.4.3",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
]
