[project]
name = "sil-backend-assessment"
version = "0.1.0"
description = "Backend that enables user to store their favorurite albums and photos"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.10.1",
    "uvicorn>=0.32.1",
    "pydantic-settings<3.0.0,>=2.2.1",
]

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.2.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "pytest<8.0.0,>=7.4.3",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "I",
    "W",
    "F",
    "C4",
    "ARG001",
    "UP",

]

ignore = [

    "B008",
    "E501",
    "W191",
    "B904",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]



[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true