[project]
name = "sil-backend-assessment"
version = "0.1.0"
description = "Backend that enables user to store their favorurite albums and photos"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.10.1",
    "uvicorn>=0.32.1",
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic-settings<3.0.0,>=2.2.1",
    "alembic<2.0.0,>=1.12.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pyjwt<3.0.0,>=2.8.0",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "tenacity<9.0.0,>=8.2.3",
    "emails<1.0,>=0.6",
    "httpx<1.0.0,>=0.25.1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "bcrypt==4.0.1",
    "jinja2<4.0.0,>=3.1.4",
    "python-multipart<1.0.0,>=0.0.7",
    "python-dotenv>=1.0.1",
    "faker>=33.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.2.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "pytest<8.0.0,>=7.4.3",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "I",
    "W",
    "F",
    "C4",
    "ARG001",
    "UP",

]

ignore = [

    "B008",
    "E501",
    "W191",
    "B904",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
